# cplusplusidioms

./: .gitignore  CMakeLists.txt  README.md
CallBacks/: CMakeLists.txt
CallBacks/inc/: callbacks.h
CallBacks/src/: callbacks.cpp  main.cpp
Pimpl/: CMakeLists.txt
Pimpl/inc/: pimpl.h
Pimpl/src/: main.cpp  pimpl.cpp
RAII/inc/: socket.h  socket_manager.h
RAII/src/: main.cpp
src/: socket.cpp  socket_manager.cpp
